--- a/barbie.html
+++ b/barbie.html
@@ -17,7 +17,7 @@
 
 
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./barbie_game.css">
+    <link rel="stylesheet" href="./barbie.css">
     <title>Barbie vs. Fashion Police</title>
     <body>
         <h1>Barbie vs. Fashion Police</h1>
@@ -101,5 +101,5 @@
                 <div id="log"></div>
             </div>
         </div>
-        <script src="barbie_game.js"></script>
+        <script src="barbie.js"></script>
     </body>
